<resources>
    <string name="app_name">MGNREGA</string>
    <string name="admin">Admin</string>
    <string name="worker">Worker</string>
    <string name="language">Language</string>
    <string name="exit">Exit</string>
    <string name="welcome">Welcome</string>
    <string name="adhar_cardno">Adhar_cardno</string>
    <string name="enter_worker_details">Enter worker details</string>
    <string name="user_name">User_name</string>
    <string name="adhar_no">Adhar_no</string>
    <string name="age">Age</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="capture">Capture</string>
    <string name="login">Login</string>
    <string name="present_days_this_week">Present days(this week)</string>
    <string name="absent_days_this_week">Absent days(this week)</string>
    <string name="total_salary_this_week">Total salary(this week)</string>
    <string name="add_worker">Add worker</string>
    <string name="check_in">Check_in</string>
    <string name="check_out">Check_out</string>
    <string name="status">Status</string>
    <string name="admin_id">Admin_id</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="logout">Logout</string>
    <string name="more">More</string>
    <string name="removeworker">Removeworker</string>
    <string name="Adhar_No">Adhar_No</string>
    <string name="remove">Remove</string>
    <string name="salary_per_hour">Salary per hour</string>
    <string name="change">Change</string>
    <string name="ok">Ok</string>
    <string name="enter_new_salary_per_hour">Enter new salary per hour</string>
    <string name="enter">Enter</string>
    <string name="confirm">Confirm</string>
    <string name="re_enter_password">Re-enter-password</string>
    <string name="enter_new_password">Enter_new_password</string>
    <string name="enter_new_user_id">Enter new user id</string>
    <string name="go">Go</string>
    <string name="Home">Home</string>
    <string name="enter_state_name">Enter State Name</string>
    <string name="enter_state_code">Enter State Code</string>
    <string name="enter_salary_for_state">Enter Salary For State</string>
    <string name="proceed">Proceed</string>
    <string name="admin_details">Admin Details</string>
    <string name="enter_email_id">Enter_email_id</string>
    <string name="enter_password">Enter_password</string>
    <string name="salary">Salary</string>
    <string name="see_data">See Data</string>
    <string name="mail_data">Mail Data</string>
    <string name="enter_date_dd_mm_yyyy">Enter Date(dd-mm-yyyy)</string>
    <string name="get">Get</string>
    <string name="back">Back</string>
    <string name="jobcardno">JobCardNo</string>
    <string name="email_id">Email_id</string>
    <string name="present_days">Present days</string>
    <string name="total_salary">Total salary</string>
    <string name="home">Home</string>


</resources>
