<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    tools:context=".Main13Activity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/admin_details"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:drawableStart="@drawable/ic_person"
        android:ems="10"
        android:hint="@string/enter_email_id"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText12"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/editText15"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText13"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/confirmbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText15"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</RelativeLayout>