<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    tools:context=".Main2Activity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="73dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="90dp"
        android:text="@string/enter_worker_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="126dp"
    tools:layout_editor_absoluteY="44dp" />


    <EditText
        android:id="@+id/editText10"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-5dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:drawableStart="@drawable/ic_person"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText10"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/Adhar_No"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number" />

    <Button
        android:id="@+id/bt11"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp
"
        android:layout_marginTop="450dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText3"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Jobcardno"
        android:inputType="textPersonName" />


</RelativeLayout>