<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/adminbt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/admin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/workerbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/adminbt"
        android:layout_alignStart="@id/adminbt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/worker"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/languagebtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/workerbtn"
        android:layout_alignStart="@id/workerbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/language"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/languagebtn"
        android:layout_alignLeft="@id/languagebtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/exit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</RelativeLayout>