<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    tools:context=".Main17Activity">

    <EditText
        android:id="@+id/datedata"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/enter_date_dd_mm_yyyy"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="81dp" />

    <Button
        android:id="@+id/donedata"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/datedata"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/get"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/back"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/donedata"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
</RelativeLayout>