<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    tools:context=".Main6Activity">


    <Button
        android:id="@+id/bt2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/check_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt2"
        android:layout_alignStart="@id/bt2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/check_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt3"
        android:layout_alignStart="@id/bt3"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/status"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
</RelativeLayout>