<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    tools:context=".Main16Activity">

    <Button
        android:id="@+id/salarychange"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/salary"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000" />

    <Button
        android:id="@+id/seedata1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/salarychange"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/see_data"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000" />

    <Button
        android:id="@+id/maildata"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/seedata1"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/mail_data"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000" />
</RelativeLayout>