<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    tools:context=".Main9Activity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/jobcardno"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="148dp" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView10"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@id/textView10"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/remove"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/remove"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/donebtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/remove"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/done"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</RelativeLayout>